package com.example.tourmanagement.model.enums;

public enum TourStatus {
    PLANNING,   // Đang lên kế hoạch
    OPEN,       // Đang mở bán
    FULL,       // Đã đủ khách
    ONGOING,    // Đang diễn ra
    COMPLETED,  // Đã hoàn thành
    CANCELLED   // Đã hủy
}
